--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,27 +55,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# 0 "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "yZ5osB7ONHje"
       },
@@ -122,36 +101,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 45,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "  "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 48,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "tensor([[1.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-            "        [0.0000, 1.0000, 0.2582,  ..., 0.0000, 0.0000, 0.0000],\n",
-            "        [0.0000, 0.2582, 1.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
-            "        ...,\n",
-            "        [0.0000, 0.0000, 0.0000,  ..., 1.0000, 0.0000, 0.0000],\n",
-            "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 1.0000, 0.2500],\n",
-            "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.2500, 1.0000]])\n"
-          ]
-        }
-      ],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "U6XzVxtENHjh"
@@ -162,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "erC5X1k6NHjh"
       },
@@ -174,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "id": "vmsuqARsNHjh"
       },
@@ -277,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "id": "Owm4IW40NHjl"
       },
@@ -288,7 +237,7 @@
         "\n",
         "gdc = GDC(diffusion_kwargs = dict(method='ppr', alpha=0.15))\n",
         "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
-        "                                                num_nodes=data.num_nodes, normalization='sym').to(device)     \n",
+        "                                                num_nodes=data.num_nodes, normalization='sym')    \n",
         "\n",
         "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
         "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
@@ -296,20 +245,12 @@
         "trans_matrix.fill_diagonal_(1)\n",
         "pagerank = trans_matrix.to(device)\n",
         "\n",
-        "args = {\n",
-        "    'device': device,\n",
-        "    'hidden_layers': 1,\n",
-        "    'hidden_dim': 264,\n",
-        "    'dropout': 0.3,\n",
-        "    'lr': 3e-4,\n",
-        "    'epochs': 80,\n",
-        "    'trans_matrix': pagerank\n",
-        "}"
+        "args['trans_matrix'] = pagerank"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,7 +258,31 @@
         "id": "bTepgU1dNHjm",
         "outputId": "74aaab2e-3a8d-4669-b84e-117c7ad5218f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch: 01, Loss: 2.2898, Train: 21.56%, Test: 20.83%\n",
+            "Epoch: 02, Loss: 1.9891, Train: 34.33%, Test: 33.40%\n",
+            "Epoch: 03, Loss: 1.7195, Train: 49.70%, Test: 47.54%\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[57], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m loss_fn \u001b[39m=\u001b[39m nll_loss\n\u001b[0;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m args[\u001b[39m\"\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m\"\u001b[39m]):\n\u001b[1;32m---> 11\u001b[0m   loss \u001b[39m=\u001b[39m train(model, data, train_idx, args[\u001b[39m'\u001b[39;49m\u001b[39mtrans_matrix\u001b[39;49m\u001b[39m'\u001b[39;49m], optimizer, loss_fn)\n\u001b[0;32m     12\u001b[0m   train_acc, test_acc \u001b[39m=\u001b[39m test(model, data, train_idx, test_idx, args[\u001b[39m'\u001b[39m\u001b[39mtrans_matrix\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     14\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mEpoch: \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m:\u001b[39;00m\u001b[39m02d\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     15\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mLoss: \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     16\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTrain: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39m100\u001b[39m\u001b[39m*\u001b[39mtrain_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     17\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTest: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39m100\u001b[39m\u001b[39m*\u001b[39mtest_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\Graph-Diffusion-Convolution\\utils.py:8\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(model, data, train_idx, adj_t, optimizer, loss_fn)\u001b[0m\n\u001b[0;32m      5\u001b[0m model\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m      7\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m----> 8\u001b[0m out \u001b[39m=\u001b[39m model(data\u001b[39m.\u001b[39;49mx, adj_t)\n\u001b[0;32m      9\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(out[train_idx], data\u001b[39m.\u001b[39my[train_idx]\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[0;32m     10\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1191\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1193\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1194\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1195\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\Graph-Diffusion-Convolution\\models.py:28\u001b[0m, in \u001b[0;36mGCN_Classifier.forward\u001b[1;34m(self, x, transition_matrix)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x, transition_matrix):\n\u001b[1;32m---> 28\u001b[0m     z \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49msparse\u001b[39m.\u001b[39;49mmm(transition_matrix, x)\n\u001b[0;32m     29\u001b[0m     z \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc1(z)\n\u001b[0;32m     30\u001b[0m     z \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbn1(z)\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
         "                       hidden_dim=args['hidden_dim'],\n",
@@ -357,6 +322,16 @@
       "source": [
         "heat = gdc_heat(A, 3, 10, 1e-4)\n",
         "heat = torch.from_numpy(heat).float().to(device)\n",
+        "\n",
+        "gdc = GDC(diffusion_kwargs = dict(method='heat', t=3))\n",
+        "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "                                                num_nodes=data.num_nodes, normalization='sym')    \n",
+        "\n",
+        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
+        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "\n",
+        "trans_matrix.fill_diagonal_(1)\n",
+        "heat = trans_matrix.to(device)\n",
         "\n",
         "args['trans_matrix'] = heat"
       ]
