--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -11,6 +11,14 @@
         "outputId": "e0b47720-9f4f-4d38-d0c8-612cef60e53b"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -44,6 +52,7 @@
         "from torch_geometric.datasets import Planetoid\n",
         "from torch_geometric.transforms.gdc import GDC\n",
         "from torch.nn.functional import nll_loss\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
         "from matrix_format import gdc_pagerank, gdc_heat, compute_Lsym, compute_Lrw\n",
         "from models import GCN_Classifier\n",
@@ -64,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +86,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\33646\\AppData\\Local\\Temp\\ipykernel_30784\\351346556.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "C:\\Users\\33646\\AppData\\Local\\Temp\\ipykernel_33104\\398904010.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n"
           ]
         }
@@ -97,7 +106,9 @@
         "\n",
         "# Exctract adjacency matrix\n",
         "A = nx.adjacency_matrix(Gnx).toarray()\n",
-        "data = data.to(device)"
+        "data = data.to(device)\n",
+        "\n",
+        "accuracy_dict = {}"
       ]
     },
     {
@@ -111,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "erC5X1k6NHjh"
       },
@@ -123,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "vmsuqARsNHjh"
       },
@@ -161,10 +172,13 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=args['lr'])\n",
         "loss_fn = nll_loss\n",
         "\n",
+        "\n",
+        "accuracy_dict['Lsym'] = []\n",
         "for epoch in range(1, 1 + args[\"epochs\"]):\n",
         "  loss = train(model, data, train_idx, args['trans_matrix'], optimizer, loss_fn)\n",
         "  train_acc, test_acc = test(model, data, train_idx, test_idx, args['trans_matrix'])\n",
         "\n",
+        "  accuracy_dict['Lsym'].append(test_acc)\n",
         "  print(f'Epoch: {epoch:02d}, '\n",
         "        f'Loss: {loss:.4f}, '\n",
         "        f'Train: {100*train_acc:.2f}%, '\n",
@@ -205,10 +219,12 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=args['lr'])\n",
         "loss_fn = nll_loss\n",
         "\n",
+        "accuracy_dict['Lrw'] = []\n",
         "for epoch in range(1, 1 + args[\"epochs\"]):\n",
         "  loss = train(model, data, train_idx, args['trans_matrix'], optimizer, loss_fn)\n",
         "  train_acc, test_acc = test(model, data, train_idx, test_idx, args['trans_matrix'])\n",
         "\n",
+        "  accuracy_dict['Lrw'].append(test_acc)\n",
         "  print(f'Epoch: {epoch:02d}, '\n",
         "        f'Loss: {loss:.4f}, '\n",
         "        f'Train: {100*train_acc:.2f}%, '\n",
@@ -226,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "Owm4IW40NHjl"
       },
@@ -250,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,31 +274,7 @@
         "id": "bTepgU1dNHjm",
         "outputId": "74aaab2e-3a8d-4669-b84e-117c7ad5218f"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Epoch: 01, Loss: 2.2898, Train: 21.56%, Test: 20.83%\n",
-            "Epoch: 02, Loss: 1.9891, Train: 34.33%, Test: 33.40%\n",
-            "Epoch: 03, Loss: 1.7195, Train: 49.70%, Test: 47.54%\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[57], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m loss_fn \u001b[39m=\u001b[39m nll_loss\n\u001b[0;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m args[\u001b[39m\"\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m\"\u001b[39m]):\n\u001b[1;32m---> 11\u001b[0m   loss \u001b[39m=\u001b[39m train(model, data, train_idx, args[\u001b[39m'\u001b[39;49m\u001b[39mtrans_matrix\u001b[39;49m\u001b[39m'\u001b[39;49m], optimizer, loss_fn)\n\u001b[0;32m     12\u001b[0m   train_acc, test_acc \u001b[39m=\u001b[39m test(model, data, train_idx, test_idx, args[\u001b[39m'\u001b[39m\u001b[39mtrans_matrix\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     14\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mEpoch: \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m:\u001b[39;00m\u001b[39m02d\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     15\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mLoss: \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     16\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTrain: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39m100\u001b[39m\u001b[39m*\u001b[39mtrain_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%, \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     17\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTest: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39m100\u001b[39m\u001b[39m*\u001b[39mtest_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
-            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\Graph-Diffusion-Convolution\\utils.py:8\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(model, data, train_idx, adj_t, optimizer, loss_fn)\u001b[0m\n\u001b[0;32m      5\u001b[0m model\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m      7\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m----> 8\u001b[0m out \u001b[39m=\u001b[39m model(data\u001b[39m.\u001b[39;49mx, adj_t)\n\u001b[0;32m      9\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(out[train_idx], data\u001b[39m.\u001b[39my[train_idx]\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[0;32m     10\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
-            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1191\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1193\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1194\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1195\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\Graph-Diffusion-Convolution\\models.py:28\u001b[0m, in \u001b[0;36mGCN_Classifier.forward\u001b[1;34m(self, x, transition_matrix)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x, transition_matrix):\n\u001b[1;32m---> 28\u001b[0m     z \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49msparse\u001b[39m.\u001b[39;49mmm(transition_matrix, x)\n\u001b[0;32m     29\u001b[0m     z \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc1(z)\n\u001b[0;32m     30\u001b[0m     z \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbn1(z)\n",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
         "                       hidden_dim=args['hidden_dim'],\n",
@@ -293,10 +285,12 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=args['lr'])\n",
         "loss_fn = nll_loss\n",
         "\n",
+        "accuracy_dict['pagerank'] = []\n",
         "for epoch in range(1, 1 + args[\"epochs\"]):\n",
         "  loss = train(model, data, train_idx, args['trans_matrix'], optimizer, loss_fn)\n",
         "  train_acc, test_acc = test(model, data, train_idx, test_idx, args['trans_matrix'])\n",
         "\n",
+        "  accuracy_dict['pagerank'].append(test_acc)\n",
         "  print(f'Epoch: {epoch:02d}, '\n",
         "        f'Loss: {loss:.4f}, '\n",
         "        f'Train: {100*train_acc:.2f}%, '\n",
@@ -320,8 +314,8 @@
       },
       "outputs": [],
       "source": [
-        "heat = gdc_heat(A, 3, 10, 1e-4)\n",
-        "heat = torch.from_numpy(heat).float().to(device)\n",
+        "# heat = gdc_heat(A, 3, 10, 1e-4)\n",
+        "# heat = torch.from_numpy(heat).float().to(device)\n",
         "\n",
         "gdc = GDC(diffusion_kwargs = dict(method='heat', t=3))\n",
         "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
@@ -357,14 +351,33 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=args['lr'])\n",
         "loss_fn = nll_loss\n",
         "\n",
+        "accuracy_dict['heat'] = []\n",
         "for epoch in range(1, 1 + args[\"epochs\"]):\n",
         "  loss = train(model, data, train_idx, args['trans_matrix'], optimizer, loss_fn)\n",
         "  train_acc, test_acc = test(model, data, train_idx, test_idx, args['trans_matrix'])\n",
         "\n",
+        "  accuracy_dict['heat'].append(test_acc)\n",
         "  print(f'Epoch: {epoch:02d}, '\n",
         "        f'Loss: {loss:.4f}, '\n",
         "        f'Train: {100*train_acc:.2f}%, '\n",
         "        f'Test: {100*test_acc:.2f}%')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "plt.plot(accuracy_dict['Lsym'], label='Lsym')\n",
+        "plt.plot(accuracy_dict['Lrw'], label='Lrw')\n",
+        "plt.plot(accuracy_dict['pagerank'], label='pagerank')\n",
+        "plt.plot(accuracy_dict['heat'], label='heat')\n",
+        "plt.legend()\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Accuracy')\n",
+        "plt.title('Accuracy vs Epochs')"
       ]
     },
     {
@@ -411,34 +424,9 @@
         "test_prop = 0.2\n",
         "train_idx = torch.tensor(np.random.binomial(1, 1-test_prop, size=data.y.shape[0])).to(bool)\n",
         "test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n",
-        "train_idx = train_idx.to(device)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(13471, 13471)"
-            ]
-          },
-          "execution_count": 25,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "A.shape"
+        "train_idx = train_idx.to(device)\n",
+        "\n",
+        "accuracy_dict = {}"
       ]
     },
     {
@@ -474,10 +462,12 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=args['lr'])\n",
         "loss_fn = nll_loss\n",
         "\n",
+        "accuracy_dict['Lsym'] = []\n",
         "for epoch in range(1, 1 + args[\"epochs\"]):\n",
         "  loss = train(model, data, train_idx, args['trans_matrix'], optimizer, loss_fn)\n",
         "  train_acc, test_acc = test(model, data, train_idx, test_idx, args['trans_matrix'])\n",
         "\n",
+        "  accuracy_dict['Lsym'].append(test_acc)\n",
         "  print(f'Epoch: {epoch:02d}, '\n",
         "        f'Loss: {loss:.4f}, '\n",
         "        f'Train: {100*train_acc:.2f}%, '\n",
@@ -497,8 +487,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
-        "pagerank = torch.from_numpy(pagerank).float().to(device)\n",
+        "# pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
+        "# pagerank = torch.from_numpy(pagerank).float().to(device)\n",
+        "\n",
+        "gdc = GDC(diffusion_kwargs = dict(method='ppr', alpha=0.15))\n",
+        "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "                                                num_nodes=data.num_nodes, normalization='sym')    \n",
+        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
+        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "\n",
+        "trans_matrix.fill_diagonal_(1)\n",
+        "pagerank = trans_matrix.to(device)\n",
         "args['trans_matrix'] = pagerank\n",
         "\n",
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
@@ -510,10 +509,13 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=args['lr'])\n",
         "loss_fn = nll_loss\n",
         "\n",
+        "\n",
+        "accuracy_dict['pagerank'] = []\n",
         "for epoch in range(1, 1 + args[\"epochs\"]):\n",
         "  loss = train(model, data, train_idx, args['trans_matrix'], optimizer, loss_fn)\n",
         "  train_acc, test_acc = test(model, data, train_idx, test_idx, args['trans_matrix'])\n",
         "\n",
+        "  accuracy_dict['pagerank'].append(test_acc)\n",
         "  print(f'Epoch: {epoch:02d}, '\n",
         "        f'Loss: {loss:.4f}, '\n",
         "        f'Train: {100*train_acc:.2f}%, '\n",
@@ -533,8 +535,18 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "heat = gdc_heat(A, 3, 10, 1e-4)\n",
-        "heat = torch.from_numpy(heat).float().to(device)\n",
+        "# heat = gdc_heat(A, 3, 10, 1e-4)\n",
+        "# heat = torch.from_numpy(heat).float().to(device)\n",
+        "\n",
+        "gdc = GDC(diffusion_kwargs = dict(method='heat', t=3))\n",
+        "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "                                                num_nodes=data.num_nodes, normalization='sym')    \n",
+        "\n",
+        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
+        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "\n",
+        "trans_matrix.fill_diagonal_(1)\n",
+        "heat = trans_matrix.to(device)\n",
         "\n",
         "args['trans_matrix'] = heat\n",
         "\n",
@@ -547,14 +559,32 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=args['lr'])\n",
         "loss_fn = nll_loss\n",
         "\n",
+        "accuracy_dict['heat'] = []\n",
         "for epoch in range(1, 1 + args[\"epochs\"]):\n",
         "  loss = train(model, data, train_idx, args['trans_matrix'], optimizer, loss_fn)\n",
         "  train_acc, test_acc = test(model, data, train_idx, test_idx, args['trans_matrix'])\n",
         "\n",
+        "  accuracy_dict['heat'].append(test_acc)\n",
         "  print(f'Epoch: {epoch:02d}, '\n",
         "        f'Loss: {loss:.4f}, '\n",
         "        f'Train: {100*train_acc:.2f}%, '\n",
         "        f'Test: {100*test_acc:.2f}%')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.plot(accuracy_dict['Lsym'], label='Lsym')\n",
+        "plt.plot(accuracy_dict['pagerank'], label='pagerank')\n",
+        "plt.plot(accuracy_dict['heat'], label='heat')\n",
+        "plt.legend()\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Test Accuracy')\n",
+        "plt.title('performance vs transition Matrix')\n",
+        "plt.show()"
       ]
     }
   ],
