--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -11,14 +11,6 @@
         "outputId": "e0b47720-9f4f-4d38-d0c8-612cef60e53b"
       },
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -73,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,7 +78,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\33646\\AppData\\Local\\Temp\\ipykernel_33104\\398904010.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "C:\\Users\\33646\\AppData\\Local\\Temp\\ipykernel_33104\\168661518.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n"
           ]
         }
@@ -107,6 +99,7 @@
         "# Exctract adjacency matrix\n",
         "A = nx.adjacency_matrix(Gnx).toarray()\n",
         "data = data.to(device)\n",
+        "data.edge_weight = torch.ones(data.edge_index.shape[1]).to(device)\n",
         "\n",
         "accuracy_dict = {}"
       ]
@@ -122,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "erC5X1k6NHjh"
       },
@@ -134,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "vmsuqARsNHjh"
       },
@@ -242,11 +235,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "Owm4IW40NHjl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "'NoneType' object has no attribute 'dim'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[8], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m gdc \u001b[39m=\u001b[39m GDC(diffusion_kwargs \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(method\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mppr\u001b[39m\u001b[39m'\u001b[39m, alpha\u001b[39m=\u001b[39m\u001b[39m0.15\u001b[39m))\n\u001b[0;32m      5\u001b[0m edge_weight \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mones(data\u001b[39m.\u001b[39medge_index\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m])\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m----> 6\u001b[0m edge_index, edge_weight \u001b[39m=\u001b[39m gdc\u001b[39m.\u001b[39;49mtransition_matrix(edge_index\u001b[39m=\u001b[39;49mdata\u001b[39m.\u001b[39;49medge_index, edge_weight\u001b[39m=\u001b[39;49mdata\u001b[39m.\u001b[39;49medge_weight,\n\u001b[0;32m      7\u001b[0m                                                 num_nodes\u001b[39m=\u001b[39;49mdata\u001b[39m.\u001b[39;49mnum_nodes, normalization\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msym\u001b[39;49m\u001b[39m'\u001b[39;49m)    \n\u001b[0;32m      9\u001b[0m trans_matrix \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((data\u001b[39m.\u001b[39mnum_nodes, data\u001b[39m.\u001b[39mnum_nodes))\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m     10\u001b[0m trans_matrix[edge_index[\u001b[39m0\u001b[39m], edge_index[\u001b[39m1\u001b[39m]] \u001b[39m=\u001b[39m edge_weight\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_geometric\\transforms\\gdc.py:165\u001b[0m, in \u001b[0;36mGDC.transition_matrix\u001b[1;34m(self, edge_index, edge_weight, num_nodes, normalization)\u001b[0m\n\u001b[0;32m    163\u001b[0m \u001b[39mif\u001b[39;00m normalization \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msym\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m    164\u001b[0m     row, col \u001b[39m=\u001b[39m edge_index\n\u001b[1;32m--> 165\u001b[0m     deg \u001b[39m=\u001b[39m scatter_add(edge_weight, col, dim\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m, dim_size\u001b[39m=\u001b[39;49mnum_nodes)\n\u001b[0;32m    166\u001b[0m     deg_inv_sqrt \u001b[39m=\u001b[39m deg\u001b[39m.\u001b[39mpow(\u001b[39m-\u001b[39m\u001b[39m0.5\u001b[39m)\n\u001b[0;32m    167\u001b[0m     deg_inv_sqrt[deg_inv_sqrt \u001b[39m==\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39m'\u001b[39m\u001b[39minf\u001b[39m\u001b[39m'\u001b[39m)] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_scatter\\scatter.py:29\u001b[0m, in \u001b[0;36mscatter_add\u001b[1;34m(src, index, dim, out, dim_size)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mscatter_add\u001b[39m(src: torch\u001b[39m.\u001b[39mTensor, index: torch\u001b[39m.\u001b[39mTensor, dim: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[0;32m     27\u001b[0m                 out: Optional[torch\u001b[39m.\u001b[39mTensor] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m     28\u001b[0m                 dim_size: Optional[\u001b[39mint\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[1;32m---> 29\u001b[0m     \u001b[39mreturn\u001b[39;00m scatter_sum(src, index, dim, out, dim_size)\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_scatter\\scatter.py:11\u001b[0m, in \u001b[0;36mscatter_sum\u001b[1;34m(src, index, dim, out, dim_size)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mscatter_sum\u001b[39m(src: torch\u001b[39m.\u001b[39mTensor, index: torch\u001b[39m.\u001b[39mTensor, dim: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[0;32m      9\u001b[0m                 out: Optional[torch\u001b[39m.\u001b[39mTensor] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m     10\u001b[0m                 dim_size: Optional[\u001b[39mint\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[1;32m---> 11\u001b[0m     index \u001b[39m=\u001b[39m broadcast(index, src, dim)\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m out \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     13\u001b[0m         size \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(src\u001b[39m.\u001b[39msize())\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_scatter\\utils.py:10\u001b[0m, in \u001b[0;36mbroadcast\u001b[1;34m(src, other, dim)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, dim):\n\u001b[0;32m      9\u001b[0m         src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39munsqueeze(\u001b[39m0\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(src\u001b[39m.\u001b[39mdim(), other\u001b[39m.\u001b[39;49mdim()):\n\u001b[0;32m     11\u001b[0m     src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39munsqueeze(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     12\u001b[0m src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39mexpand(other\u001b[39m.\u001b[39msize())\n",
+            "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'dim'"
+          ]
+        }
+      ],
       "source": [
         "# pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
         "# pagerank = torch.from_numpy(pagerank).float().to(device)\n",
@@ -420,6 +429,7 @@
         "data.x = data.x[list(mapping.values())]\n",
         "data.y = data.y[list(mapping.values())]\n",
         "data = data.to(device)\n",
+        "data.edge_weight = torch.ones(data.edge_index.shape[1]).to(device)\n",
         "\n",
         "test_prop = 0.2\n",
         "train_idx = torch.tensor(np.random.binomial(1, 1-test_prop, size=data.y.shape[0])).to(bool)\n",
